# rusty-vision

./: .gitignore  Cargo.toml  README.md  config.json  frag.spv  mac_os.sh  vert.spv
shaders/: basic.frag  basicAudio.frag  default.vert  deformed.frag  deformedImage.frag  hexagonal1.frag  hexagonal2.frag  imageFade.frag  index.json  kaleidoscope.frag  kaleidoscope1.frag  kaleidoscope1Image.frag  kifs.frag  kifs2.frag  kifs3.frag  mandelbox.frag  mandelbulb.frag  mfccBands.frag  shapeScope.frag  soundBands.frag  soundCells.frag  soundFBM.frag  soundLights.frag  soundball.frag  space.frag  squareSpiral.frag  tetrahedron.frag  truchet2.frag  webcam.frag  webcamCells.frag
shaders/basic/: basic.frag  basicAudio.frag  deformed.frag  deformedImage.frag  driveHome.frag  eye.frag  flow.frag  flowImage.frag  flower.frag  heart.frag  imageFade.frag  index.json  lights.frag  lines1.frag  lines2.frag  mandelbrot.frag  motionBlur.frag  palette.frag  soundBands.frag  soundLights.frag  soundball.frag  squareSpiral.frag  sunset.frag  sunset.fs
shaders/basic3D/: cube_noise.fs  cube_noise_2.fs  cube_noise_3.fs  cube_tide.fs  diamonds.fs  index.json  points.fs  pyramid_cubes.fs
shaders/collabs/: index.json  yama.frag
shaders/fractals/: flame.frag  flame1.fs  flame2.frag  flame2.fs  hexFractal.frag  hex_fractal.fs  index.json  kaliset.frag  kaliset1.fs  kaliset2.frag  kaliset2.fs  kaliset3.fs  (+7 more)
src/: app.rs  app_config.rs  config.rs  d2.rs  interface.rs  main.rs  pipelines.rs  program_store.rs  programs.rs  quad_2d.rs  shader_store.rs  shader_watch.rs  shaders.rs  uniforms.rs  util.rs
(+289 files in other folders)
