[package]
name = "rusty_vision"
version = "0.1.0"
authors = ["Jules Youngberg <julesdayoungberg@gmail.com>"]
edition = "2018"

[dependencies]
apodize = "1.0.0"
cpal = "0.13.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
nannou = "0.15"
notify = "4.0.12"
path-slash = "0.1.3"
rayon = "1.4"
regex = "1"
ringbuf = "0.2.3"
rustfft = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaderc = "0.6"
websocket = "0.26.2"
